test/Feature/Output/OverlappedError.c.tmp.klee-out/test000003.ptr.err
Error: memory error: out of bound pointer
File: /home/sanghu/TracerX/tracerx/test/Feature/OverlappedError.c
Line: 12
assembly.ll line: 34
Stack: 
	#000000034 in main () at /home/sanghu/TracerX/tracerx/test/Feature/OverlappedError.c:12
Info: 
	address: (Add w64 37267744
          (SExt w64 (ReadLSB w32 0 range_1)))
	example: 37267749
	range: [37267749, 37267749]
	next: object at 37357248 of size 15
		MO9[15] allocated at global:.str12
	prev: object at 37267744 of size 8
		MO26[8] allocated at main():  %5 = call noalias i8* @malloc(i64 8) #6, !dbg !130
