test/Feature/Output/OverlappedError.c.tmp.klee-out/test000003.pc
array range[4] : w32 -> w8 = symbolic
array range_1[4] : w32 -> w8 = symbolic
(query [(Ult N0:(ReadLSB w32 0 range)
              2)
         (Eq false (Eq 0 N0))
         (Ult N1:(ReadLSB w32 0 range_1)
              6)
         (Eq false
             (Ult (SExt w64 N1) 5))]
        false)
